syntax = "proto3";
package camion;

message paqueteRegistro {
	string idPaquete = 1;
    int64 seguimiento = 2;
    string tipo = 3;
    int64 valor = 4;
    int64 intentos = 5;
    string estado = 6;
}

message informeCamion {
    int64 idPaquete = 1;
    string estado = 2;
}

service CamionService{
    rpc nuevoPaquete(paqueteRegistro) returns (paqueteRegistro) {}
}